--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,5 +19,49 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+}
 
+.container {
+    min-height: 100vh;
+    background-color: var(--bg);
+    color: var(--textColor)
+}
+
+.wrapper {
+    max-width: 1536px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blue;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+@media screen and (max-width: 1536px) {
+    .wrapper {
+        max-width: 1366px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .wrapper {
+        max-width: 1024px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .wrapper {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .wrapper {
+        max-width: 640px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .wrapper {
+        max-width: 475px;
+    }
 }
