--- a/src/components/Featured/featured.module.css
+++ b/src/components/Featured/featured.module.css
@@ -1,1 +1,24 @@
-.container {}
+.container {
+    margin-top: 30px;
+}
+
+.title {
+    font-size: 96px;
+}
+
+.post {
+    margin-top: 60px;
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.imgContainer {
+    flex: 1;
+    height: 500px;
+    position: relative;
+}
+
+.textContainer {
+    flex: 1;
+}
