--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -21,3 +21,24 @@
   flex-direction: column;
   gap: 30px;
 }
+
+.date {
+  color: gray;
+}
+
+.category {
+  color: crimson;
+  font-weight: 500;
+}
+
+.desc {
+  font-size: 18px;
+  font-weight: 300;
+  color: var(--softTextColor);
+}
+
+.link {
+  border-bottom: 1px solid crimson;
+  width: max-content;
+  padding: 2px 0;
+}
