--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -1,3 +1,29 @@
 .container {
-    flex: 2;
+  flex: 2;
+  margin-top: 60px;
+}
+.subtitle {
+  color: gray;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.title {
+  font-size: 28px;
+}
+
+.items {
+}
+.item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.imageContainer {
+  flex: 1;
+  aspect-ratio: 1/1;
+  position: relative;
+}
+.textContainer {
+  flex: 4;
 }
