--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -2,6 +2,7 @@
   flex: 2;
   margin-top: 60px;
 }
+
 .subtitle {
   color: gray;
   font-size: 16px;
@@ -12,18 +13,40 @@
   font-size: 28px;
 }
 
-.items {
-}
+.items {}
+
 .item {
   display: flex;
   align-items: center;
   gap: 20px;
 }
+
 .imageContainer {
   flex: 1;
   aspect-ratio: 1/1;
   position: relative;
 }
+
+.image {
+  border-radius: 50%;
+  border: 3px solid lightgray;
+  object-fit: cover;
+}
+
 .textContainer {
   flex: 4;
+}
+
+.postTitle {
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--softTextColor);
+}
+
+.detail {
+  font-size: 12px;
+}
+
+.date {
+  color: gray;
 }
