style: Update category class names in Menu component

--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -37,6 +37,38 @@
   flex: 4;
 }
 
+.category {
+  padding: 3px 8px;
+  border-radius: 10px;
+  font-size: 12px;
+  color: white;
+  width: max-content;
+}
+
+.category.travel {
+  background-color: #ff7857;
+}
+
+.category.culture {
+  background-color: #ffb14f;
+}
+
+.category.food {
+  background-color: #7fb881;
+}
+
+.category.travel {
+  background-color: #ff7887;
+}
+
+.category.travel {
+  background-color: #775aec;
+}
+
+.category.travel {
+  background-color: #789cff;
+}
+
 .postTitle {
   font-size: 18px;
   font-weight: 500;
